--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
   "@type": "WebSite",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "https://gerald4.github.io/?q={search_term_string}",
+    "target": "https://gerald4.github.io?q={search_term_string}",
     "query-input": "required name=search_term_string"
   },
-  "url": "https://gerald4.github.io/"
+  "url": "https://gerald4.github.io"
 }
 </script>
 
