--- a/project/external-project/index.html
+++ b/project/external-project/index.html
@@ -582,7 +582,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#talks"><span>Talks</span></a>
+          <a class="nav-link " href="/#talks_bis"><span>Talks</span></a>
         </li>
 
         
