--- a/trash_publication/journal-article/index.html
+++ b/trash_publication/journal-article/index.html
@@ -537,7 +537,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#talks"><span>Talks</span></a>
+          <a class="nav-link " href="/#talks_bis"><span>Talks</span></a>
         </li>
 
         
