--- a/index.html
+++ b/index.html
@@ -1771,7 +1771,7 @@ I am a PhD student in Machine Learning at the University of Namur under the supe
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 
 
-
+<a href="https://clustrmaps.com/site/1blqh"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=uh8EhhwckvrNQY8bFO-Wg6T7RPgL0igrqtvIjy0_STY&cl=ffffff" /></a>
 
 </body>
 </html>
