see if changes after all

--- a/event/index.html
+++ b/event/index.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="PhD Student in Machine Learning" />
+  <meta name="description" content="Postdoctoral Researcher in Machine Learning" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://gerald4.github.io/event/" />
@@ -353,7 +353,7 @@
   <meta property="og:site_name" content="Geraldin Nanfack" />
   <meta property="og:url" content="https://gerald4.github.io/event/" />
   <meta property="og:title" content="Recent &amp; Upcoming Talks | Geraldin Nanfack" />
-  <meta property="og:description" content="PhD Student in Machine Learning" /><meta property="og:image" content="https://gerald4.github.io/media/icon_hud624b6d467f68b67e72ccf759198487a_205_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Postdoctoral Researcher in Machine Learning" /><meta property="og:image" content="https://gerald4.github.io/media/icon_hud624b6d467f68b67e72ccf759198487a_205_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://gerald4.github.io/media/icon_hud624b6d467f68b67e72ccf759198487a_205_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
