--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
 
       <div class="portrait-title">
         <h2>Géraldin Nanfack</h2>
-        <h3>PhD Student in Machine Learning</h3>
+        <h3>Postdoctoral Researcher in Machine Learning</h3>
 
         
         <h3>
