--- a/trash_publication/example/index.html
+++ b/trash_publication/example/index.html
@@ -1025,7 +1025,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://gerald4.github.io">Géraldin Nanfack</a></h5>
-      <h6 class="card-subtitle">PhD Student in Machine Learning</h6>
+      <h6 class="card-subtitle">Postdoctoral Researcher in Machine Learning</h6>
       <p class="card-text">My research interests include constraints in machine learning, interpretability and trustworthiness.</p>
       <ul class="network-icon" aria-hidden="true">
   
